--- a/src/components/Win.module.css
+++ b/src/components/Win.module.css
@@ -1,6 +1,32 @@
 .box {
-    width:30%;
+    width:50vh;
     margin: auto 35%;
     background-color: white;
-    z-index: 11;
+    height:40vh;
+
+    border-radius: 15%;
+
+    text-align: center;
+    font-family: cursive;
+    font-size:6vh;
+
+    position: fixed;
+    z-index: 10;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+}
+
+.box p{
+    margin-top: 15vh;
+}
+.box button{
+    border-radius: 15px;
+    width: 10vh;
+    height: 5vh;
+    background-color: rgb(94, 189, 0);
+    color:white;
+    font-size: xx-large;
+    font-family: cursive;
 }
